--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    path:
+    paths:
       - src/**
     branches:
       - main
@@ -23,5 +23,5 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: smekarthick/flaskke:${github.sha::5}
+          tags: smekarthick/flaskke:${{ github.sha.substr(0,7) }}
       
