--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,21 +7,40 @@ on:
     branches:
       - main
 
+jobs:name: Docker Image CI
+
+on:
+  push:
+    path:
+      - src/**
+    branches:
+      - main
+
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            smekarthick/flaskke
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=semver,pattern={{version}}
 
       -
         name: Build and push
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: smekarthick/flaskke:${{ github.sha.substr(0,7) }}
-      
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
