--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,5 +31,6 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: smekarthick/flaskke:${{env.new_tag}}
-          
+          tags: |
+            smekarthick/flaskke:${{env.new_tag}}
+            smekarthick/flaskke:latest
