--- a/charts/python-app/values.yaml
+++ b/charts/python-app/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 5
 image:
   repository: smekarthick/flaskke
   pullPolicy: IfNotPresent
-  tag: v3
+  tag: latest
 
 imagePullSecrets: []
 nameOverride: ""
